--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
-  dio: ^4.0.6
   desktop_window: ^0.4.0
+  http: ^0.13.4
 
 
 flutter_test:
